# Silan-Viking

./: .gitignore  .mcp.json  README.md  USAGE.md  package-lock.json  silan-viking.toml
.codex/: config.toml
_deploy/: index.html
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: application.rs  commands.rs  insights.rs  main.rs  model.rs  openai_credentials.rs  projection.rs
desktop/src-tauri/tests/: architecture_contract.rs
engine/crates/silan-viking-app/: Cargo.toml
engine/crates/silan-viking-app/src/: capture.rs  credential_profile.rs  delivery_control.rs  editor.rs  geo_advisor.rs  github_oauth_credentials.rs  google_oauth_credentials.rs  lib.rs  media_library.rs  media_optimizer.rs  openai_credentials.rs  openai_image_generation.rs  openai_transcription.rs  query.rs  schema.rs  source_lock.rs  stats.rs  translation_ai.rs  website_insights.rs  workspace_content.rs  workspace_sync.rs
engine/crates/silan-viking-app/src/parser/: blog.rs  entry.rs  episode.rs  error.rs  frontmatter.rs  idea.rs  mod.rs  moment.rs  parsed.rs  project.rs  prose_type.rs  registry.rs  relations.rs  resume.rs  toml_entries.rs  update.rs
engine/crates/silan-viking-app/src/proposal/: accept.rs  git.rs  lock.rs  mod.rs  store.rs
engine/crates/silan-viking-app/src/sync/: error.rs  mod.rs  rows.rs  run.rs  sink.rs
engine/crates/silan-viking-app/src/sync/mapper/: blog.rs  episode.rs  idea.rs  media_uri.rs  mod.rs  moment.rs  project.rs  prose_mapper.rs  registry.rs  resume.rs  table_names.rs  update.rs
engine/crates/silan-viking-app/src/workspace/: mod.rs  scan.rs
engine/crates/silan-viking-app/tests/: capture_source.rs  editor_source.rs  m5_parser.rs  m6_sync.rs  proposal_accept.rs  stats_sync.rs
engine/crates/silan-viking-base/: Cargo.toml
engine/crates/silan-viking-base/src/: error.rs  hash.rs  ids.rs  lang.rs  lib.rs  meta.rs  slug.rs  traits.rs  uri.rs
engine/crates/silan-viking-cli/: Cargo.toml  build.rs  portfolio.db
engine/crates/silan-viking-cli/assets/: SCHEMA.md
engine/crates/silan-viking-cli/src/: banner.rs  credentials.rs  main.rs  onboarding.rs  scaffold.rs  skill.rs
engine/crates/silan-viking-cli/tests/: cli.rs  command_coverage.rs  doc_contract.rs  end_to_end.rs  guide.rs  help_dispatch.rs  mcp_server.rs  onboarding.rs  skill.rs  uninstall.rs
engine/crates/silan-viking-content/: Cargo.toml
engine/crates/silan-viking-content/src/: anthology.rs  collection.rs  error.rs  file.rs  item.rs  kind.rs  lib.rs  manifest.rs  namespace.rs  part.rs  relation.rs  series.rs
engine/crates/silan-viking-mcp/: Cargo.toml
engine/crates/silan-viking-mcp/src/: lib.rs  server.rs
engine/crates/silan-viking-mcp/tests/: capture_propose.rs  recall_and_context.rs
silan-personal-website/: MANIFEST.in  README.md  pyproject.toml  requirements.txt
silan-personal-website/silan/: __init__.py  silan.py
silan-personal-website/silan/cli/: skill_command.py
silan-personal-website/silan/logic/: cli_logic.py  skill_logic.py
silan-personal-website/silan/skills/silan-blog/: SKILL.md
silan-personal-website/silan/skills/silan-blog/references/: cli-commands.md  content-structure.md  frontmatter.md
silan-personal-website/silan/templates/frontend-dev/: eslint.config.js  index.html  package-lock.json  tailwind.config.js  vite.config.ts
silan-personal-website/silan/templates/frontend-dev/scripts/: prerender.mjs
silan-personal-website/silan/templates/frontend-dev/src/: App.tsx  index.tsx
silan-personal-website/silan/templates/frontend-dev/src/api/: config.ts  contentParts.ts
silan-personal-website/silan/templates/frontend-dev/src/api/home/: resumeApi.ts
silan-personal-website/silan/templates/frontend-dev/src/api/moments/: momentApi.ts
silan-personal-website/silan/templates/frontend-dev/src/api/projects/: projectApi.ts
silan-personal-website/silan/templates/frontend-dev/src/components/: LanguageContext.tsx  Seo.tsx
silan-personal-website/silan/templates/frontend-dev/src/components/BlogStack/: ArticleDetailLayout.tsx  index.ts
silan-personal-website/silan/templates/frontend-dev/src/hooks/: useRemoteResource.ts
silan-personal-website/silan/templates/frontend-dev/src/layout/: Footer.tsx  PageTitleContext.tsx  TopNavigation.tsx
silan-personal-website/silan/templates/frontend-dev/src/lib/: markdown.ts
silan-personal-website/silan/templates/frontend-dev/src/styles/: easynet-textures.css
silan-personal-website/silan/templates/frontend-dev/src/types/: api.ts  contact.ts  episode.ts
silan-personal-website/silan/templates/frontend-dev/src/utils/: fingerprint.ts  readingTime.ts  runtimeContext.ts  socialPlatform.tsx
silan-personal-website/silan/templates/frontend-dev/src/views/: BlogStack.tsx  InteractiveContactPage.tsx  Moments.tsx
silan-personal-website/silan/templates/frontend-dist/: index.html
silan-personal-website/silan/templates/frontend-dist/assets/: Badge-D8R_cqOh.js  Badge-D8R_cqOh.js.map  BlogContentRenderer-DX2FEufC.js  BlogContentRenderer-DX2FEufC.js.map  BlogDetail-EBvfF7q3.js  BlogDetail-EBvfF7q3.js.map  BlogHeader-DdbFDx0z.js  BlogHeader-DdbFDx0z.js.map  BlogStack-B17AzrBS.js  BlogStack-B17AzrBS.js.map  BrandLoading-ChQ3IcoI.js  BrandLoading-ChQ3IcoI.js.map  CommentsSection-Dj4XF2Lp.js  CommentsSection-Dj4XF2Lp.js.map  DataDisplay-7tluRWu7.js  DataDisplay-7tluRWu7.js.map  EntityDiscussion-BVc54yHd.js  EntityDiscussion-BVc54yHd.js.map  EpisodeDetail-BimOj9sQ.js  EpisodeDetail-BimOj9sQ.js.map  InteractiveContactPage-B5V2NPT_.js  InteractiveContactPage-B5V2NPT_.js.map  Layout-8tqbtCYg.js  Layout-8tqbtCYg.js.map  Markdown-DwfyIuXr.js  Markdown-DwfyIuXr.js.map  Masonry-xfEysQH7.js  Masonry-xfEysQH7.js.map  Moments-CpzzxTf5.js  Moments-CpzzxTf5.js.map  ProjectCard-a8e1ej_e.js  ProjectCard-a8e1ej_e.js.map  ProjectDetail-UjuRhaNE.js  ProjectDetail-UjuRhaNE.js.map  ProjectGallery-BpMtYTaV.js  ProjectGallery-BpMtYTaV.js.map  ResumeWebsite-CMDmhquL.js  ResumeWebsite-CMDmhquL.js.map  SearchResults-B6zUngFN.js  SearchResults-B6zUngFN.js.map  (+45 more)
(+1245 files in other folders)
