[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silan-personal-website"
version = "2.0.0"
authors = [
    {name = "Silan Hu", email = "silan.hu@u.nus.edu"},
]
description = "Thin wrapper that forwards the `silan` command to the silan-viking engine"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
keywords = ["portfolio", "cms", "markdown", "content-management", "cli-tools"]

# No runtime dependencies: this package is a pure entry-point shim that
# `os.execv`s the `silan-viking` binary. It must keep working even where
# the old click/rich/sqlalchemy stack was never installed.
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "pytest>=7.0.0",
    "mypy>=0.991",
    "flake8>=5.0.0",
    "isort>=5.10.0",
]

[project.urls]
Homepage = "https://github.com/Qingbolan/Silan-Personal-Website"
Documentation = "https://github.com/Qingbolan/Silan-Personal-Website/blob/main/README.md"
Repository = "https://github.com/Qingbolan/Silan-Personal-Website.git"
"Bug Tracker" = "https://github.com/Qingbolan/Silan-Personal-Website/issues"

# Both names forward to the same shim. `silan-build-backend` was
# removed — its target (`build_backend:main`) no longer exists.
[project.scripts]
silan = "silan.silan:cli"
silan-db-tools = "silan.silan:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["silan*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --strict-config --color=yes"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]