[package]
name = "silan-desktop"
version = "1.0.0"
edition = "2021"
rust-version = "1.95"
authors = ["Silan.Hu <silan.hu@u.nus.edu>"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
silan-viking-app = { path = "../../engine/crates/silan-viking-app" }
tauri = { version = "2", features = ["protocol-asset"] }
ureq = { version = "2", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[dev-dependencies]
tempfile = "3"
