# L4 cli —— 命令行 adapter。binary 名 silan-viking,以 silan 之名进 PATH。
[package]
name = "silan-viking-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "silan-viking"
path = "src/main.rs"

[dependencies]
silan-viking-base = { workspace = true }
silan-viking-app  = { workspace = true }
silan-viking-mcp  = { workspace = true }
silan-viking-site = { workspace = true }
rusqlite          = { workspace = true }
time              = { workspace = true }
toml              = { workspace = true }
md5               = { workspace = true }
rpassword         = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[dev-dependencies]
# The CLI integration tests parse the binary's JSON output.
serde_json        = { workspace = true }
