# L4 mcp —— MCP server adapter(里程碑 M9)。
[package]
name = "silan-viking-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
silan-viking-app = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
time = { workspace = true }
rusqlite = { workspace = true }
